--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <title>Document</title>
     </head>
 <body>
-    
+    <input type="text" id="marca" placeholder="Marca">
+    <input type="text" id="modelo" placeholder="Modelo">
+    <input type="text" id="color" placeholder="Color">
+    <button onclick="capturar ()">Submit</button>
+    <button id="saludo">Pulsa aquí</button>
+<div id="salida"></div>
+<div id="lista"></div>
+
+
+
+
     <script src="scripts/main.js"></script>
 </body>
 </html>
