incorporando storage e interaccion

--- a/index.html
+++ b/index.html
@@ -16,7 +16,18 @@
 <div id="lista"></div>
 
 
-
+ <main id="contenido">
+    <h1>Corredores Favoritos</h1>
+    <form id="formulario">
+        <label for="choice">Mi elección</label><br>
+        <textarea id="choice"></textarea>
+        <button type="submit">Agregar</button>
+    </form>
+    <div>
+        <h2>My Corredores:</h2>
+        <ul id="lista-elegida"></ul>
+    </div>
+</main>
 
     <script src="scripts/main.js"></script>
 </body>
