--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <ul id="lista-elegida"></ul>
     </div>
 </main>
-
+<button id="test">Reset Datos</button>
     <script src="scripts/main.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
