--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Document</title>
     </head>
 <body>
-    <input type="text" id="marca" placeholder="Marca">
+    <!-- <input type="text" id="marca" placeholder="Marca">
     <input type="text" id="modelo" placeholder="Modelo">
     <input type="text" id="color" placeholder="Color">
     <button onclick="capturar ()">Submit</button>
     <button id="saludo">Pulsa aquí</button>
 <div id="salida"></div>
-<div id="lista"></div>
+<div id="lista"></div> -->
 
 
  <main id="contenido">
@@ -29,6 +29,14 @@
     </div>
 </main>
 <button id="test">Reset Datos</button>
+
+<ul id="listado">
+</ul>
+
+<button id="btn">btn</button>
+
+
+    
     <script src="scripts/main.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
